--- a/Main/Application/Info.plist
+++ b/Main/Application/Info.plist
@@ -11,13 +11,18 @@
 			<key>UIWindowSceneSessionRoleApplication</key>
 			<array>
 				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Avenir-Heavy.ttf</string>
+		<string>Avenir-Roman.ttf</string>
+	</array>
 </dict>
 </plist>
