feat: create domain test module

--- a/CoraBankChallenge.xcodeproj/xcshareddata/xcschemes/Main.xcscheme
+++ b/CoraBankChallenge.xcodeproj/xcshareddata/xcschemes/Main.xcscheme
@@ -35,14 +35,14 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "95B433BE2BE33C83007B238C"
+               BlueprintIdentifier = "95E3E1D82C1BC2B2002A58C0"
                BuildableName = "DomainTests.xctest"
                BlueprintName = "DomainTests"
                ReferencedContainer = "container:CoraBankChallenge.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
+            skipped = "YES"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
