test: create usecase tests

--- a/CoraBankChallenge.xcodeproj/xcshareddata/xcschemes/Domain.xcscheme
+++ b/CoraBankChallenge.xcodeproj/xcshareddata/xcschemes/Domain.xcscheme
@@ -30,7 +30,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Domain.xctestplan"
+            reference = "container:DomainTests/Domain.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
